--- a/style.css
+++ b/style.css
@@ -7,3 +7,13 @@ body{
    background: #000000;
    color: #ffffff;
 }
+#form{
+   background: #913333;
+   display: flex;
+}
+
+@media screen and (max-width: 480px){
+   body{
+      background: #ffffff;
+   }
+}
