--- a/style.css
+++ b/style.css
@@ -4,16 +4,179 @@
    padding: 0;
 }
 body{
-   background: #000000;
-   color: #ffffff;
+   background: #209f7bb9;
+   color: #050231a6;
+   min-height: 100vh;
+   width: 100vw;
+}
+.container{
+   display: flex;
+   flex-direction: column;
+   /* justify-content: center; */
+   align-items: center;
+}
+header{
+   height: fit-content;
+   width: 100%;
+   display: flex;
+   flex-direction: row;
+   justify-content: space-between;
+   align-items: center;
+   background: #36040446;
+   position: fixed;
+   /* margin-bottom: 30vh; */
+}
+#header-img{
+   align-self: center;
+   width: 30vw;
+   margin: 2px 1%;
+}
+#header-heading{
+   color: #050231e7;
+   display: flex;
+   justify-content: center;
+   text-align: center;
+   margin: 5vh 0;
+   font-size: 1.5rem;
+   text-decoration: underline;
+}
+.alig-rig{
+   justify-self: flex-end;
+   /* align-self: flex-end; */
+
+}
+#nav-bar{
+   display: flex;
+   justify-content: center;
+   height: 8vh;
+   align-items: flex-end;
+   margin: 0 10vw;
+   list-style: none;
+}
+.nav-link{
+   text-decoration: wavy;
+   color: #000;
+   margin-right: 1rem;
+}
+#features{
+   width: 70vw;
+   margin: 30vh 0 0 0 ;
+   display: flex;
+   flex-wrap: wrap;
+   justify-content: center;
+   align-items: center;
+}
+.feature-ele{
+   margin: 0 10px;
+   padding: 10px;
+   display: flex;
+   width: 30%;
+   flex-direction: column;
+   align-items: center;
+   justify-content: center;
+}
+.feature-ele > i{
+   font-size: 100px;
+}
+.feature-ele > h6{
+   font-size: 1.5rem;
+   text-decoration: underline;
+   font-weight: 500;
+}
+#pricing{
+   width: 70vw;
+   margin: 20vmin 10px;
+   display: flex;
+   flex-wrap: wrap;
+   justify-content: space-around;
+}
+.item{
+   padding: 30px;
+   width: fit-content;
+   background-color: #3d050548;
+   border: 1px solid #31f1bbb9;
+   border-radius: 5px;
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+}
+.item > h5{
+   font-size: 1.5rem;
+}
+.item li{
+   list-style-type: none;
+   padding: 5px 0;
+}
+.item > button{
+   margin: 10px;
+   width: 110px;
+   height: 30px;
+   background: #0000002c;
+   border: 1px solid #00000063;
+   border-radius: 4px;
 }
 #form{
-   background: #913333;
-   display: flex;
+   /* background: #913333; */
+   /* width: 50vw; */
+   padding: 20px;
+   margin: 5vmin;
+   height: max-content;
+   border-radius: 4px;
+   border: 1px solid #ffffff77;
+}
+#form .grid{
+   display: grid;
+   margin: 5px;
+   grid-template-columns: 1fr 3fr;
+   grid-template-rows: 1.5fr 3fr 2.5fr;
+   grid-gap: 10px;
+   /* align-items: center; */
+}
+.al-c{
+   align-self: center;
+}
+#form h4{
+   font-size: 2rem;
+   text-align: center;
+}
+#form #email{
+   padding: 2px 5px;
+   border: 1px solid #74747477;
+   border-radius: 5px;
+}
+#form #message{
+   padding: 5px;
+   border: 1px solid #74747477;
+   border-radius: 5px;
+}
+.grid > #submit{
+   margin: 5px 8vw;
+   grid-column: 1/3;
+   background: rgba(0, 0, 0, 0.247);
+   border: 1px solid #ffffff83;
+   border-radius: 10px;
+}
+footer{
+   width: 40%;
+   /* border: 3px solid #dd0909e5; */
 }
 
-@media screen and (max-width: 480px){
-   body{
-      background: #ffffff;
+@media screen and (max-width: 700px){
+   #features{
+      width: 100vw;
+      flex-wrap: wrap;
    }
 }
+@media screen and (max-width: 500px){
+   #features{
+      width: 100vw;
+   }
+
+}
+
+/* 
+#1bbe9f
+#fafcfc
+#209f7a
+#acacb1
+*/
