video fixed design fixed

--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body{
 }
 header{
    height: fit-content;
-   width: 100%;
+   width: 100vw;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
@@ -83,9 +83,12 @@ header{
    text-decoration: underline;
    font-weight: 500;
 }
+#works{
+   margin: 70px 0;
+}
 #pricing{
    width: 70vw;
-   margin: 20vmin 10px;
+   margin: 10vmin 10px;
    display: flex;
    flex-wrap: wrap;
    justify-content: space-around;
@@ -116,10 +119,10 @@ header{
    border-radius: 4px;
 }
 #form{
-   /* background: #913333; */
-   /* width: 50vw; */
+   width: 40vw;
    padding: 20px;
-   margin: 5vmin;
+   margin: 20px;
+   margin-bottom: 10vmin;
    height: max-content;
    border-radius: 4px;
    border: 1px solid #ffffff77;
@@ -157,7 +160,8 @@ header{
    border-radius: 10px;
 }
 footer{
-   width: 40%;
+   width: 50%;
+   text-align: center;
    /* border: 3px solid #dd0909e5; */
 }
 
